--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="DeepSeek Chat Interface" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>DeepSeek Chat</title>
+    <title>DeepSeek Chat Demo - FromYuncan</title>
   </head>
   <body>
     <noscript>您需要启用 JavaScript 才能运行此应用。</noscript>
